# crosscompute

./: .gitignore  .gitmodules  .travis.yml  CHANGES.md  CHANGES.rst  LICENSE  LICENSE.md  MANIFEST.in  README.md  README.rst  TODO.goals  pyproject.toml  refresh.sh  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml
crosscompute/: __init__.py  __main__.py  apps.py  configurations.py  constants.py  dependencies.py  exceptions.py  extensions.py  fallbacks.py  macros.py  models.py  routines.py  settings.py  symmetries.py  temporaries.py  tests.py  variables.py
crosscompute-old/: constants.py  exceptions.py
crosscompute-old/macros/: configuration.py  disk.py  iterable.py  log.py  process.py
crosscompute-old/routines/: automation.py  configuration.py
crosscompute-old/scripts/: launch.py  run.py
crosscompute-old/templates/: automation.jinja2  base.jinja2  live.jinja2  page.jinja2
crosscompute-old/views/: __init__.py  automation.py  echo.py
crosscompute/apps/: base.py
crosscompute/assets/: automation.html  base.html  button-panel.html  checkbox-output-header.js  checkbox-output.js  configuration.yaml  configuration.yml  default.css  embedded.css  file-input-header.js  file-input.html  file-input.js  flex-vertical.css  flex.css  frame-output-header.js  frame-output.js  image-header.js  image-output.js  json-header.js  json-output-header.js  json-output.js  library.js  link-header.js  link-output-header.js  link-output.js  live.html  markdown-header.js  markdown-output-header.js  markdown-output.js  part.min.css  part.min.css.map  part.min.js  pdf-header.js  pdf-output.js  pdf.css  printed.css  radio-input.html  radio-input.js  radio-output-header.js  radio-output.js  (+15 more)
crosscompute/dependencies/: automation.py  batch.py  step.py
crosscompute/macros/: __init__.py  configuration.py  disk.py  iterable.py  log.py  memory.py  package.py  process.py  security.py  text.py  web.py
crosscompute/routers/: automation.py  file.py  mutation.py  root.py  stream.py  token.py
crosscompute/routes/: authorization.py  automation.py  mutation.py  stream.py  token.py
crosscompute/routines/: __init__.py  asset.py  authorization.py  automation.py  batch.py  configuration.py  connection.py  database.py  definition.py  disk.py  execution.py  interface.py  log.py  mutation.py  printer.py  serialization.py  server.py  step.py  template.py  type.py  uri.py  validation.py  variable.py  web.py  work.py  x.py
crosscompute/scaffolds/: __init__.py
crosscompute/scripts/: __init__.py  configure.py  convert.py  debug.py  launch.py  print.py  run.py  serve.py  setup.py  work.py
crosscompute/templates/: automation.html  automation.jinja2  base.html  base.jinja2  batch.jinja2  checkboxHeader.js  checkboxInput.html  checkboxInput.js  checkboxOutput.js  configuration.yaml  configuration.yml  frameHeader.js  frameOutput.js  home.jinja2  imageHeader.js  imageOutput.js  item.jinja2  linkHeader.js  linkOutput.js  live.html  live.jinja2  markdownHeader.js  markdownOutput.js  mode.jinja2  modeBody.js  modeBodyJs.jinja2  modeMainHtml.jinja2  page.jinja2  pageBody.js  pageMain.html  radioHeader.js  radioInput.html  radioOutput.js  result.jinja2  root.html  root.jinja2  step.html  stepBody.js  stepMain.html  stringHeader.js  (+11 more)
crosscompute/types/: __init__.py  integer.jinja2  path.jinja2  string.jinja2  text.jinja2
crosscompute/views/: __init__.py  automation.py  echo.py
experiments/: Compute File Hashes 20220105.ipynb  Expand Batch Definitions 20220208.ipynb  Generate Basic Form 20211025.ipynb  Get Batch Definitions 20211205.ipynb  Load Automation Definitions 20211128.ipynb  Restore Functionality 20211019.ipynb  Run Batches 20211029.ipynb  Untitled.ipynb  add_tool.py  add_tool_from_configuration_path.py  automation.jinja2  base.jinja2  choropleth-graffiti-20211020.html  get_patch_request.py  home.jinja2  listen_to_echoes.py  mapbox.html  pydeck-scatterplot.html  pydeck-screengrid.html  run_batches_20211029.py  run_queue.py  serve-20211104.py  server-sent-events.py  target.html  template.html  x.html
experiments/0.8/: setup.py
experiments/distributed/: a.sh  c.sh  serve.py
experiments/podman/: Run Containers 20220617.ipynb
lib/crosscompute/: exceptions.py
sass_modules/: crosscompute.scss
tests/: cc.ini  conftest.py  test_config.py  test_configurations.py  test_constants.py  test_downloaded_files.py  test_integer.py  test_long_files.py  test_macros.py  test_macros_configuration.py  test_macros_iterable.py  test_macros_security.py  test_macros_web.py  test_routines.py  test_routines_automation.py  test_routines_configuration.py  test_routines_connection.py  test_routines_definition.py  test_routines_execution.py  test_routines_serialization.py  test_routines_variable.py  test_routines_web.py  test_routines_work.py  test_run.py  test_serve.py  test_serve_show_plot.py  test_string.py  test_template.py  test_types.py  test_unicode.py  test_work.py
tests/authorization-groups/: automate.yaml  automate.yml  run.py  tokens.yaml  tokens.yml
tests/conditional-templates/: automate.yml  input-adult.md  input-afternoon-adult.md  input-afternoon-child.md  input-child.md  input-morning-adult.md  input-morning-child.md  input.md  input1.md  output.md  run.py
tests/dataset-references/: automate.yml  run.py
tests/dynamic-options/: automate.yml  run.py
tests/examples/: project.yml  report.yml  result-batch.yml  result.yml  run.py  tool-minimal.yml  tool.yml
tests/log-variables/: automate.yml  log.md  run.py
tests/optimal-fetches/: automate.yml
tests/result/: x.cfg
tests/scripts/: accept script filename with spaces.py  cc.ini  count_characters.py  count_words.py  ideas.md  long_output.py  many_points.py  points.csv  print_unicode.py  read_arabic_content.py  read_long_file.py  show_plot.py  target_folder.py
tests/tools/: assign.py  cc.ini  echo.py  save_content.py  take spaces.py
tests/variable-views/: automate.yml  form-part1.md  form.md  input1.md  input2.md  output1.md  report-part1.md  report-part2.md  report-section1.md  report-section2.md  report.css  style.css
(+126 files in other folders)
