[metadata]
name = crosscompute
version = 0.9.0
description = Automate your Jupyter notebooks and scripts as web-based reports, forms, tools, widgets, dashboards.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://crosscompute.com
author = CrossCompute Inc.
author_email = support@crosscompute.com
license = MIT
license_file = LICENSE.md
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    Framework :: CrossCompute
    Framework :: Pyramid
    Intended Audience :: Analysts
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: WSGI
    Topic :: Internet :: WWW/HTTP :: WSGI :: Application
    Topic :: Software Development :: Libraries :: Application Frameworks
project_urls =
    Bug Tracker = https://github.com/crosscompute/crosscompute/issues
    Documentation = https://github.com/crosscompute/crosscompute-docs
    Source Code = https://github.com/crosscompute/crosscompute
[options]
packages = find:
python_requires = >=3.9
install_requires =
    markdown
    pyramid
    pyramid_jinja2
    pyyaml
    waitress
    watchgod
zip_safe = True
[options.entry_points]
console_scripts =
    crosscompute = crosscompute.scripts:launch
[options.extras_require]
test =
    # check-manifest
    hypothesis
    # pytest-check-links
    pytest-console-scripts
    pytest-cov
    pytest-mock
    pytest-xdist
    requests-cache

[flake8]
max-line-length = 79
select = B,C,E,F,W
ignore = W503

[coverage:run]
parallel = true
branch = true
source = crosscompute
[coverage:paths]
source = crosscompute

[tox]
envlist = lint,py36,py37,py38,py39,coverage-report
[testenv]
deps =
    .[test]
commands =
    coverage run -m pytest -vv tests -n auto
[testenv:coverage-report]
deps = coverage
skip_install = true
commands =
    coverage combine
    coverage report
[testenv:lint]
deps = flake8
skip_install = true
commands =
    flake8 crosscompute

[gh-actions]
python =
    3.6: py36
    3.7: py37
    3.8: py38
    3.9: py39
