[metadata]
name = crosscompute
version = 0.9.4.5
description = Automate your Jupyter notebooks and scripts as tools, reports, dashboards.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://crosscompute.com
author = CrossCompute Inc.
author_email = support@crosscompute.com
license = MIT
license_file = LICENSE.md
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    # Framework :: CrossCompute
    Framework :: FastAPI
    # Intended Audience :: Analysts
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: WSGI
    Topic :: Internet :: WWW/HTTP :: WSGI :: Application
    Topic :: Software Development :: Libraries :: Application Frameworks
project_urls =
    Bug Tracker = https://github.com/crosscompute/crosscompute/issues
    Documentation = https://docs.crosscompute.com
    Source Code = https://github.com/crosscompute/crosscompute
[options]
packages = find:
python_requires = >=3.10
install_requires =
    fastapi
    importlib-metadata >= 6.6.0
    invisibleroads-macros-disk >= 1.3.0
    invisibleroads-macros-log >= 1.0.6
    invisibleroads-macros-process >= 0.2.0
    invisibleroads-macros-security >= 1.0.3
    invisibleroads-macros-text >= 1.1.2
    invisibleroads-macros-web[jinja,markdown,starlette] >= 0.3.2
    jinja2
    nbconvert
    nbformat
    python-multipart
    requests
    ruamel.yaml
    sse-starlette
    tomli
    uvicorn >= 0.22.0
    watchfiles
zip_safe = True
[options.package_data]
crosscompute =
    assets/*.css
    assets/*.html
    assets/*.ico
    assets/*.js
    assets/*.yml
[options.entry_points]
console_scripts =
    crosscompute = crosscompute.scripts.launch:do
crosscompute.views =
    link = crosscompute.routines.variable.LinkView
    string = crosscompute.routines.variable.StringView
    number = crosscompute.routines.variable.NumberView
    password = crosscompute.routines.variable.PasswordView
    email = crosscompute.routines.variable.EmailView
    text = crosscompute.routines.variable.TextView
    markdown = crosscompute.routines.variable.MarkdownView
    image = crosscompute.routines.variable.ImageView
    radio = crosscompute.routines.variable.RadioView
    checkbox = crosscompute.routines.variable.CheckboxView
    table = crosscompute.routines.variable.TableView
    frame = crosscompute.routines.variable.FrameView
    json = crosscompute.routines.variable.JsonView
    pdf = crosscompute.routines.variable.PdfView
    file = crosscompute.routines.variable.FileView
[options.extras_require]
test =
    # check-manifest
    # hypothesis
    # pytest-check-links
    # pytest-console-scripts
    pytest-cov
    # pytest-mock
    pytest-xdist
    requests-cache

[flake8]
max-line-length = 79
select = B,C,E,F,W
ignore = W503

[coverage:run]
parallel = true
branch = true
source = crosscompute
[coverage:paths]
source = crosscompute

[tox:tox]
envlist = lint,py310,coverage-report
[testenv]
deps =
    .[test]
commands =
    coverage run -m pytest -vv tests -n auto
[testenv:coverage-report]
deps = coverage
skip_install = true
commands =
    coverage combine
    coverage report
[testenv:lint]
deps = flake8
skip_install = true
commands =
    flake8 crosscompute

[gh-actions]
python =
    3.10: py310
